# asset-inventory

./: .env  .gitignore  README.md  docker-compose.yml  env_file  initdb.js  notes  package-lock.json  package.json  schema.json
api/: .dockerignore  Cargo.toml  Dockerfile
api/.cargo/: config  config.toml
api/src/: addDefaultCreds.rs  asset.rs  auth.rs  auth_middleware.rs  error.rs  helpers.rs  main.rs  models.rs  part.rs  password.rs  user.rs
nginx/: nginx.conf
web/: Dockerfile  decs.d.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
web/src/: AssetAddModal.tsx  AssetData.tsx  AssetEditModal.tsx  DashDrawer.tsx  DashNav.tsx  DashTopBar.tsx  Dashboard.tsx  DataTable.tsx  EnhancedTableHead.tsx  TopBar.tsx  UserAddModal.tsx  index.css  index.js  index.tsx  rows.tsx  sortingHelpers.tsx  store.ts  theme.ts  theme.tsx  types.d.ts
web/src/actionCreators/: getAssets.ts
web/src/components/: AdminRoute.tsx  EnhancedInputField.tsx  EnhancedSwitch.tsx  PrivateRoute.tsx
web/src/helpers/: getComparator.ts  login.ts
web/src/reducers/: assetsReducer.ts
web/src/slices/: assetsSlice.ts  registerSlice.ts  userSlice.ts  usersSlice.ts
web/src/thunks/: addAsset.ts  addUser.ts  deleteAssets.ts  deleteUsers.ts  editAsset.ts  editUser.ts  getAssets.ts  getUsers.ts  login.ts  requestPassForm.ts  sendPassReset.ts  setPassword.ts
web/src/types/: Asset.d.ts  AssetData.d.ts  AssetDataRequired.d.ts  AssetRequest.d.ts  AssetRequired.d.ts  Claims.d.ts  LoginForm.d.ts  Order.d.ts  User.d.ts  UserPasswordForm.d.ts  UserPermissions.d.ts  UserRequest.d.ts
(+27 files in other folders)
